# galleryomi-server

./: .env  Cargo.toml  LICENSE  README.md  Rocket.toml
docs/: diesel的使用.md  设计文档.md  问题解决.md
migrations/2025-03-16-085806_article/: down.sql  up.sql
migrations/2025-03-16-123403_base-sql-table/: up.sql
src/: main.rs  schema.rs
src/bean/: custom_error.rs  db.rs
src/dao/: image_dao.rs  mod.rs
src/database/: diff_group.rs  diff_group_image.rs  image.rs  image_tag.rs  init.rs  mod.rs  tag.rs  tag_type.rs
src/routes/: test_routes.rs
tests/: image_dao_test.rs
