[package]
name = "galleryomi-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.7", features = ["sqlite", "r2d2"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.217"
validator = "0.20.0"
serde_json = "1.0.138"
vcpkg = "0.2.15"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
