[package]
name = "galleryomi-server"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
galleryomi-server = { path = "." } # 确保测试文件能引用当前 crate

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.2.7", features = ["sqlite", "r2d2"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_sqlite_pool"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
serde = "1.0.217"
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.138"
vcpkg = "0.2.15"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
regex = "1.11.1"
uuid = { version = "1.16.0", features = ["v4"] }
